--- a/manager/web-admin/src/main/webapp/index.xhtml
+++ b/manager/web-admin/src/main/webapp/index.xhtml
@@ -8,38 +8,39 @@ and open the template in the editor.
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:b="http://bootsfaces.net/ui"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:h="http://java.sun.com/jsf/html">
+      xmlns:h="http://java.sun.com/jsf/html"
+	  xmlns:p="http://primefaces.org/ui">
     <ui:composition template="./common/template.xhtml">
         <ui:define name="title">
-            Bungalows
+            Worker
         </ui:define>
         <ui:define name="content">
-            <h3>A sample app</h3>
-            Following frameworks and techniques where used
-            <ul>
-                <li>
-                    Frontend:
-                    <ul>
-                        <li>Primefaces</li>
-                        <li>Bootfaces</li>
-                        <li>JSF</li>
-                    </ul>
-                </li>
-                <li>
-                    Domain:
-                    <ul>
-                        <li>EJB3</li>
-                        <li>Hibernate</li>
-                    </ul>
-                </li>
-                <li>
-                    Gateways:
-                    <ul>
-                        <li>JAX-RS</li>
-                    </ul>
-                </li>
-            </ul>
+       <b:row>
+				<b:panel>
+					<h:form>
+						Add Worker <p:inputText value="#{worker.naam}"  label="Enter name here" id="worker_crt_txt"/> 
+						<p:watermark for="worker_crt_txt" value="Enter the name for the worker here" id="watermark" />
+						Status  <p:selectBooleanCheckbox value="#{worker.status}" />
+						<p:commandButton value="Create" update="@form" actionListener="#{worker.create}" />
+						<hr/>
+						<p:dataTable var="wor" value="#{worker.list}">
+							<p:column headerText="Id">
+								<h:outputText value="#{wor.id}" />
+							</p:column>
+							<p:column headerText="Name">
+								<h:outputText value="#{wor.name}" />
+							</p:column>
+							<p:column headerText="URL">
+								<h:outputText value="#{wor.URL}" />
+							</p:column>
+							<p:column headerText="Status">
+								<h:outputText value="#{wor.status}" />
+							</p:column>
+						</p:dataTable>
+					</h:form>
+				</b:panel>
+
+			</b:row>
         </ui:define>
     </ui:composition>
 </html>
